Archive2/b9/978543434b82bc/output
main.cpp:2:5: error: expected unqualified-id before 'for'
     for quarter_value in range(0, 99, 25):
     ^
main.cpp:4:9: error: 'set' does not name a type
         set remain_after_quarters = 99-quarter_value;
         ^
main.cpp:5:9: error: expected unqualified-id before 'for'
         for dime_value in range(0, remain_after_quarters, 10):
         ^
main.cpp:7:13: error: 'set' does not name a type
             set remain_after_dimes = remain_after_quarters-dime_value;
             ^
main.cpp:8:13: error: expected unqualified-id before 'for'
             for nickel_value in range(0, remain_after_dimes, 5):
             ^
main.cpp:10:17: error: 'set' does not name a type
                 set penny_count = remain_after_dimes-nickel_value;
                 ^
main.cpp:11:17: error: 'dioph_combinations' does not name a type
                 dioph_combinations.append(quarter_count, dime_count, nickel_count, penny_count);
                 ^
